# ai_nFt

./: README.md  package-lock.json
ai_nFt/: package-lock.json
ai_nFt/ai_nft_solana/: Cargo.toml
ai_nFt/ai_nft_solana/scripts/: mint_nft.js
ai_nFt/ai_nft_solana/src/: error.rs  instruction.rs  lib.rs  metaplex_token_mock.rs  processor.rs  state.rs
ai_nFt/backend/: .env  arweave-key.json  package-lock.json  package.json  tsconfig.json
ai_nFt/backend/images/: metadata_1743800747458.json  metadata_1743801050815.json  metadata_1743801294283.json  metadata_1743801340266.json  metadata_1743802997315.json  metadata_1743803013134.json  metadata_1743803050821.json  metadata_1743803065360.json  metadata_1743803315857.json  metadata_1743803390467.json  metadata_1743803650806.json
ai_nFt/backend/src/: package-lock.json  package.json  server.ts
ai_nFt/frontend/: .env  config-overrides.js  package-lock.json  package.json
ai_nFt/frontend/public/: index.html  manifest.json
ai_nFt/frontend/src/: App.css  App.tsx  index.css  index.tsx
ai_nFt/frontend/src/components/: AIGenerator.tsx  NFTGenerator.css  NFTGenerator.tsx
ai_nFt/frontend/src/utils/: ai-nft-program.ts
ai_nFt/sdk/: package-lock.json  package.json  tsconfig.json
ai_nFt/sdk/src/: ai-nft-client.d.ts  ai-nft-client.js  ai-nft-client.test.ts  ai-nft-client.ts  index.ts
