[package]
name = "ai_nft_solana"
version = "0.1.0"
edition = "2021"
description = "AI-generated NFT program for Solana"
authors = ["Your Name <your.email@example.com>"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0.40"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = { version = "1.28.1", features = ["full"] }
serial_test = "2.0.0"

[lib]
crate-type = ["cdylib", "lib"]